# python_algo

./: README.md  pyproject.toml
combinatorics/: combinations_generator.md  combinations_generator.py  combinations_generator_itertools.py
